# harness-mem

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_ja.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  NOTICE  Plans.md  README.md  README.upstream.md  README_ja.md  Spec.md  TRADEMARK.md  bunfig.toml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.codex/: config.toml
.cursor/: hooks.json.example  sandbox.json
.session-notes/: 2026-04-14-breezing-resume.md
benchmarks/: locomo-full.ts  longmemeval-multisession.ts
data/: adaptive-thresholds.json  composite-score-weights.json  deep-freshness-thresholds.json  ensemble-weights.json  synonyms-en.json  synonyms-ja.json
docs/: TESTING.md  adaptive-retrieval.md  adr-001-auto-memory-coexistence.md  bun-test-panic-repro.md  claude-harness-companion-contract.md  codex-app-dogfood-2026-05-26.md  comparison-claude-mem-vs-harness-mem.md  competitor-analysis.md  cursor-marketplace-investigation.md  doctor-ux-scope-ja.md  doctor-ux-scope.md  environment-variables.md  harness-mem-setup-ja.md  harness-mem-setup.md  inject-envelope.md  memory-lifecycle-archive-design.md  onboarding-checklist-ja.md  onboarding-checklist.md  onboarding-dry-run-ja.md  onboarding-dry-run.md  openapi.yaml  pg-migration-map.md  pro-api-data-policy.md  readme-claims-ja.md  readme-claims.md  recall-runtime-benefit-gate.md  recall-runtime.md  release-process.md  retrospective-eval-guide.md  senpai-note-agent.md  senpai-note-hackathon-pitch.md  senpai-note-hackathon-setup.md  session-handoff.md  test-designs-s22.md  test-designs-s27.1.md  (+6 more)
integrations/hermes/plugin/: README.md  pyproject.toml
integrations/hermes/plugin/harness_mem_hermes_bridge/: __init__.py  plugin.py
integrations/hermes/plugin/tests/: conftest.py  test_plugin.py
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: quickstart.py
python-sdk/harness_mem/: __init__.py  client.py  crewai_memory.py  errors.py  langchain_memory.py  types.py
python-sdk/tests/: test_client.py  test_client_unit.py  test_crewai_memory.py  test_teams.py
(+1439 files in other folders)
